# VoidCore

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  FEATURE-ANALYSIS.md  LICENSE  MIGRATION-document-substrate.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC-documents.md  SPEC-doors.md  SPEC-layout.md  SPEC-screen-navigation.md  SPEC.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  Dockerfile.runtime  README.md  build.gradle.kts  settings.gradle.kts
app/dev-instance/: README.md
app/dev-instance/themes/: ws360.json
config/: pg_hba.conf  postgresql.conf
docs/: DECISIONS.md  README.md  ROADMAP.md  SPEC-documents.md  SPEC-screens.md  extending-voidcore.md  instance-customization-guide.md  session-actor-platform-thread-migration-note.md  tree-screen-skinning-note.md
docs/releases/: v0.1.0.md
doors/cityline-mud/: Dockerfile  README.md  game.mjs  index.mjs  package-lock.json  package.json  render.mjs  world.mjs
doors/cityline-mud/data/: base_items.json  (+17 more)
doors/revenge-of-the-dragon/: DESIGN.md  README.md  pyproject.toml
doors/revenge-of-the-dragon/revenge_of_the_dragon/: __init__.py  game.py  main.py  render.py  world.py
doors/sdk-node/: README.md  index.mjs  package.json  protocol.mjs  ui.mjs
doors/sdk-python/: README.md  pyproject.toml
doors/sdk-python/voidcore_door_sdk/: __init__.py  protocol.py  ui.py
scripts/: regenerate-jooq.sh
sql/init/: 01-init-roles.sh
(+692 files in other folders)
