[project]
name = "voidcore-door-sdk"
version = "0.1.0"
description = "Python SDK for VOIDcore / VOIDcore door sidecars."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets>=12.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["voidcore_door_sdk"]
